--- a/Notebooks/Notebook_Leet_20.ipynb
+++ b/Notebooks/Notebook_Leet_20.ipynb
@@ -12,6 +12,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 0: 7, 256: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "image=[[1,0,256],[0,0,0],[0,0,0]]\n",
+    "mp={}\n",
+    "row=len(image)\n",
+    "for r in range(row):\n",
+    "    for c in range(len(image[r])):\n",
+    "        pixel=image[r][c]\n",
+    "        if pixel in mp:\n",
+    "            mp[pixel]+=1\n",
+    "        else:\n",
+    "            mp[pixel]=1\n",
+    "print(mp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -40,11 +67,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit",
+   "display_name": "Python 3.9.7 ('venv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -60,7 +84,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "690c68bfdfc553f875186b12771921f6a260ad811718e3f3d94e27c803ae41f6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
